test/type_errors/cases/sql_attr_payload.ml
[%%eta.sql.table type t = { id : int [@primary_key true] }]
